--- a/appDr4Tp1/src/main/resources/application.properties
+++ b/appDr4Tp1/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.h2.console.path=/h2-console
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 
 # spring.cloud.config.enabled=false
 # spring.cloud.config.import-check.enabled=false
