--- a/appDr4Tp1/src/main/resources/application.properties
+++ b/appDr4Tp1/src/main/resources/application.properties
@@ -4,11 +4,17 @@ spring.cloud.config.enabled=false
 management.endpoints.web.exposure.include=health,info,conditions,metrics
 management.endpoint.health.show-details=always
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=pass
-spring-jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=pass
+#spring-jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://mysql:3306/teste.db
+spring.datasource.username=usuario
+spring.datasource.password=livre
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
